appId: com.logseq.ocamldemo
---
- launchApp
- assertVisible:
    id: "label.counter.value"
- tapOn:
    id: "button.counter.increment"
- assertVisible:
    id: "label.counter.value"
    text: "1"
